authencationCompleteAndAuth2DocumentFileAdded